--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
-body{
+html{
+  min-height: 100%;
+} 
+
+body {
+  min-height: 100%;
   padding-top: 40px;
   padding-bottom: 40px;
   background: linear-gradient(180deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
+  color: rgba(255, 255, 255, 1.0);
+}
+
+a {
+  color:rgba(255, 255, 255, 1.0);
 }
 
 * {
@@ -20,4 +30,8 @@ body{
   height: 48px;
   object-fit: cover;
   border-radius: 48px;
+}
+
+.item {
+  background-color: rgba(149, 123, 173, 0.5);
 }
